# flex-appeal

./: README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  README.md  fill_database.py  main.py  pyproject.toml
api/api/common/: definitions.py  models.py  settings.py
api/api/planner/: subscriptions.py  trip.py
api/api_sub_picker/common/: definitions.py
api/api_sub_picker/db/: database.py
api/common/: models.py
api/planner/: subscriptions.py  trip.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  App.jsx  Itinerary.jsx  OfferCard.jsx
