[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
